--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ img {
   height: 4px;
   position: absolute;
   left: 0;
-  top: 42px;
+  top: 44px;
   transform: translate(px);
   background-color: var(--bgd-button);
   border-radius: 2px;
@@ -410,12 +410,12 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+
   background-color: var(--white-color-text);
   color: var(--icon-main-color);
 
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: var(--timing-fucnction);
+  transition: color 250ms var(--timing-fucnction),
+    background-color 250ms var(--timing-fucnction);
 }
 
 .icon-network-link:hover,
@@ -546,9 +546,8 @@ img {
   color: var(--white-color-text);
   background-color: rgba(255, 255, 255, 0.1);
 
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: var(--timing-fucnction);
+  transition: color 250ms var(--timing-fucnction),
+    background-color 250ms var(--timing-fucnction);
 }
 
 .social-link:hover,
@@ -589,10 +588,10 @@ img {
   line-height: 1.62;
   letter-spacing: 0.03em;
   cursor: pointer;
-  
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: var(--timing-fucnction);
+
+  transition: color 250ms var(--timing-fucnction),
+    background-color 250ms var(--timing-fucnction),
+    box-shadow 250ms var(--timing-fucnction);
 }
 
 .filter-button:hover,
